k8s/cpuload/traefik/cpuload.yaml
---
  kind: Deployment
  apiVersion: extensions/v1beta1
  metadata: 
    name: cpuloadv1
    namespace: default
    labels: 
      app: cpuload
      version: v1
    annotations: 
      deployment.kubernetes.io/revision: 1
  spec: 
    replicas: 1
    selector: 
      matchLabels: 
        app: cpuload
        version: v1
    template: 
      metadata: 
        labels: 
          app: cpuload
          version: v1
      spec: 
        containers: 
          - 
            name: cpuload
            image: burning1docker/cpuload:V1
            ports: 
              - 
                containerPort: 8080
                protocol: TCP
            resources: 
              limits: 
                cpu: 1
              requests: 
                cpu: 500m
            imagePullPolicy: IfNotPresent
        restartPolicy: Always
    strategy: 
      type: RollingUpdate
      rollingUpdate: 
        maxUnavailable: 1
        maxSurge: 1
---
  kind: Service
  apiVersion: v1
  metadata: 
    name: cpuload
    namespace: default
    labels: 
      app: cpuload
    annotations: 
  spec: 
    ports: 
      - 
        name: http
        protocol: TCP
        port: 8080
        targetPort: 8080
        nodePort: 30061
    selector: 
      app: cpuload
    type: NodePort
---
  kind: Ingress
  apiVersion: extensions/v1beta1
  metadata: 
    name: cpuload
    namespace: default
    annotations: 
      kubernetes.io/ingress.class: traefik
      traefik.frontend.rule.type: PathPrefixStrip
  spec: 
    rules: 
      - 
        http: 
          paths: 
            - 
              path: /cpuload/
              backend: 
                serviceName: cpuload
                servicePort: 8080
